--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="diseño web iconos" href="https://www.flaticon.es/iconos-gratis/diseno-web" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRM - React Router DOM - Vite - Tailwind CSS</title>
+    <title>CRM</title>
   </head>
   <body class="min-h-screen bg-gray-100">
     <div id="root"></div>
