--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="diseño web iconos" href="https://www.flaticon.es/iconos-gratis/diseno-web" />
+    <link rel="icon" type="image/png" href="/src/img/crm.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRM</title>
   </head>
